k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ipfcms
  labels:
    app.kubernetes.io/name: ipfcms
    app.kubernetes.io/part-of: ipfcms
